--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/dd348bbd0a.js"></script>
 
-    <title>React App</title>
+    <title>Tom Giddings</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
