Style and contact copy updates

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:900|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:900|Merriweather:wght@300&&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/dd348bbd0a.js"></script>
 
     <title>Tom Giddings</title>
